--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,17 +22,17 @@ LI {
 
 .wrapper {
   position: absolute;
-  top: -7.5em;
-  bottom: -7.5em;
+  top: -10em;
+  bottom: -10em;
   margin: auto;
   width: 100%;
-  height: 15em;
+  height: 20em;
   text-align: center;
 }
 .wrapper:before {
   content: "";
   display: inline-block;
-  height: 15em;
+  height: 20em;
   width: 20px;
   vertical-align: middle;
 }
@@ -43,14 +43,18 @@ LI {
   display: inline-block;
   width: 2em;
   vertical-align: middle;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 .dottes:before, .dottes:after {
   content: "";
   display: block;
   width: 2em;
   height: 2em;
-  background: teal;
+  background: #1b1b1b;
   border-radius: .2em;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 .dottes:before {
   margin-bottom: 2em;
@@ -60,7 +64,7 @@ LI {
 ----------------------------------- */
 .digit {
   display: inline-block;
-  width: 8em;
+  width: 10em;
   margin: 0 1em;
   vertical-align: middle;
 }
@@ -87,7 +91,7 @@ LI {
 
 .item--h {
   clear: both;
-  width: 3em;
+  width: 5em;
   height: 2em;
   margin: 0 auto;
 }
@@ -105,8 +109,8 @@ LI {
 }
 
 .item--4 {
-  width: 3em;
-  margin: 4em auto 0;
+  width: 5em;
+  margin: 6em auto 0;
 }
 .item--4:before {
   left: -1em;
@@ -136,7 +140,7 @@ LI {
 .item--v {
   float: left;
   width: 2em;
-  height: 3em;
+  height: 5em;
   margin: 0.5em 0;
 }
 .item--v:before {
@@ -190,6 +194,13 @@ LI {
   border-color: #1b1b1b;
 }
 
+.item.dottes {
+  background: transparent;
+}
+.item.dottes:before, .item.dottes:after {
+  background: #1b1b1b;
+}
+
 .digit--sec {
   vertical-align: text-bottom;
   font-size: .5em;
@@ -197,13 +208,6 @@ LI {
 
 /* Digit Coloring
 ----------------------------------- */
-.js-color--orange {
-  background: orange;
-}
-.js-color--orange:before, .js-color--orange:after {
-  border-color: orange;
-}
-
 .js-color--crimson {
   background: crimson;
 }
@@ -211,9 +215,93 @@ LI {
   border-color: crimson;
 }
 
+.js-color--crimson.dottes {
+  background: transparent;
+}
+.js-color--crimson.dottes:before, .js-color--crimson.dottes:after {
+  background: crimson;
+}
+
+.js-color--orange {
+  background: orange;
+}
+.js-color--orange:before, .js-color--orange:after {
+  border-color: orange;
+}
+
+.js-color--orange.dottes {
+  background: transparent;
+}
+.js-color--orange.dottes:before, .js-color--orange.dottes:after {
+  background: orange;
+}
+
+.js-color--gold {
+  background: gold;
+}
+.js-color--gold:before, .js-color--gold:after {
+  border-color: gold;
+}
+
+.js-color--gold.dottes {
+  background: transparent;
+}
+.js-color--gold.dottes:before, .js-color--gold.dottes:after {
+  background: gold;
+}
+
+.js-color--yellowgreen {
+  background: yellowgreen;
+}
+.js-color--yellowgreen:before, .js-color--yellowgreen:after {
+  border-color: yellowgreen;
+}
+
+.js-color--yellowgreen.dottes {
+  background: transparent;
+}
+.js-color--yellowgreen.dottes:before, .js-color--yellowgreen.dottes:after {
+  background: yellowgreen;
+}
+
+.js-color--steelblue {
+  background: steelblue;
+}
+.js-color--steelblue:before, .js-color--steelblue:after {
+  border-color: steelblue;
+}
+
+.js-color--steelblue.dottes {
+  background: transparent;
+}
+.js-color--steelblue.dottes:before, .js-color--steelblue.dottes:after {
+  background: steelblue;
+}
+
 .js-color--teal {
   background: teal;
 }
 .js-color--teal:before, .js-color--teal:after {
   border-color: teal;
+}
+
+.js-color--teal.dottes {
+  background: transparent;
+}
+.js-color--teal.dottes:before, .js-color--teal.dottes:after {
+  background: teal;
+}
+
+.js-color--purple {
+  background: purple;
+}
+.js-color--purple:before, .js-color--purple:after {
+  border-color: purple;
+}
+
+.js-color--purple.dottes {
+  background: transparent;
+}
+.js-color--purple.dottes:before, .js-color--purple.dottes:after {
+  background: purple;
 }
