--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Mixins */
 /* Styles
 ----------------------------------- */
@@ -34,8 +35,8 @@ LI {
 
 .wrapper {
   position: absolute;
-  top: -6em;
-  bottom: -6em;
+  top: 0;
+  bottom: 0;
   margin: auto;
   width: 100%;
   height: 12em;
@@ -217,3 +218,5 @@ LI {
     display: none;
   }
 }
+
+/*# sourceMappingURL=style.unprefixed.css.map */
